[package]
name = "rusty_drivers"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.52"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Wdk_System_SystemInformation",
    "Win32_Storage_FileSystem",
    "Win32_System_Memory",
    "Win32_System_IO"
]

[dependencies.clap]
version = "4.4.11"
features = ["derive"]
